new updated files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="circle-crop">
 		<a href="https://github.com/izac10/Contact-Manager-COP4331C" target="_blank" rel="noopener noreferrer">
-			<img src="/images/UCFS035_web_1_e081dba1-037c-4065-8116-2b2d2009d692_1 10.35.44 AM.webp" alt="Citronauts Logo">
+			<img src="/images/Citro.png" alt="Citronauts Logo">
 		</a>
 	</div>
 	<div class="title-container-style title-container1">
