--- a/login-page.html
+++ b/login-page.html
@@ -24,10 +24,10 @@
 		  	<input type="text" id="loginName" placeholder="Username" /><br />
 		  	<input type="password" id="loginPassword" placeholder="Password" /><br />
 		  	<button type="button" id="loginButton" class="buttons" onclick="doLogin();">Log In</button>
-		  	<span id="loginResult"></span>
+		  	<span id="loginResult" style="color:rgb(255, 0, 221); font-weight:bold;"></span>
 		  
 		  	<p class="switch-text">
-				Don’t have an account?
+				Don&apos;t have an account?
 				<button type="button" class="switch-btn" onclick="switchToSignup()">Sign Up</button>
 		  	</p>
 		</div>
@@ -40,7 +40,7 @@
 			<input type="password" id="signupPassword" placeholder="Password" /><br />
 
 			<!-- error message -->
-			<span id="signupResult" style="color:red; font-weight:bold;"></span><br />
+			<span id="signupResult" style="color:rgb(255, 0, 221); font-weight:bold;"></span><br />
 
 			<button type="button" id="signupButton" class="buttons" onclick="doSignup();">Sign Up</button>
 		  
