Buttons style for contact-app page updated

--- a/contact-app.html
+++ b/contact-app.html
@@ -8,6 +8,9 @@
   <!-- Single stylesheet for this page -->
   <link rel="stylesheet" href="css/contact-app.css" />
 
+  <script src="js/meet_the_team.js"></script>
+  <script src="js/code.js"></script>
+
 </head>
 <body>
 
@@ -35,8 +38,6 @@
         />
         <button class="buttons" type="button" onclick="searchContacts()">Search</button>
       </div>
-
-      <button class="iconBtn" type="button" title="Refresh" onclick="loadContacts()">⟲</button>
       <button class="iconBtn" type="button" title="Add Contact" onclick="toggleAddForm()">＋</button>
     </section>
 
@@ -108,27 +109,25 @@
   
 	<div id="teamMembers" class="team-members">
 	  <a href="https://www.linkedin.com/in/angel-hernandez-salas" target="_blank" rel="noopener noreferrer" class="member-card">
-		<h3 class="member-name">Angel Hernandez</h3>
-		<p class="member-role">Frontend</p>
+      <h3 class="member-name">Angel Hernandez</h3>
+      <p class="member-role">Frontend</p>
 	  </a>
   
-	  <div class="member-card">
+    <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="member-card">
 		<h3 class="member-name">Paola Bayona</h3>
 		<p class="member-role">Project Manager/API</p>
-	  </div>
+	  </a>
   
-	  <div class="member-card">
-		<h3 class="member-name">Shahana Nizar</h3>
-		<p class="member-role">Database</p>
-	  </div>
+    <a href="https://www.linkedin.com/in/shahana-nizar" target="_blank" rel="noopener noreferrer" class="member-card">
+      <h3 class="member-name">Shahana Nizar</h3>
+      <p class="member-role">Database</p>
+	  </a>
   
-	  <div class="member-card">
-		<h3 class="member-name">Janhvi Bilagi</h3>
-		<p class="member-role">API</p>
-	  </div>
+    <a href="https://www.linkedin.com/in/janhvi-bilagi-6386a4294" target="_blank" rel="noopener noreferrer" class="member-card">
+      <h3 class="member-name">Janhvi Bilagi</h3>
+      <p class="member-role">API</p>
+	  </a>
 	</div>
   </footer>
-
-  <script src="js/code.js"></script>
 </body>
 </html>
