buttons when searching fixed

--- a/contact-app.html
+++ b/contact-app.html
@@ -113,7 +113,7 @@
       <p class="member-role">Frontend</p>
 	  </a>
   
-    <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="member-card">
+    <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" class="member-card">
 		<h3 class="member-name">Paola Bayona</h3>
 		<p class="member-role">Project Manager/API</p>
 	  </a>
